--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -18,7 +18,7 @@ jobs:
     with:
       duckdb_version: main
       ci_tools_version: main
-      extension_name: webxtension
+      extension_name: webmacro
 
   duckdb-stable-build:
     name: Build extension binaries
@@ -26,7 +26,7 @@ jobs:
     with:
       duckdb_version: v1.1.3
       ci_tools_version: v1.1.3
-      extension_name: webxtension
+      extension_name: webmacro
 
   duckdb-stable-deploy:
     name: Deploy extension binaries
@@ -35,5 +35,5 @@ jobs:
     secrets: inherit
     with:
       duckdb_version: v1.1.3
-      extension_name: webxtension
+      extension_name: webmacro
       deploy_latest: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
